Add installation slide

--- a/inst/training/ageR-101.html
+++ b/inst/training/ageR-101.html
@@ -31,6 +31,21 @@ class: center, middle, inverse, title-slide
 - A query to a database
 
 ---
+## Installation
+Current version can be installed from the GitHub repository:
+
+```r
+install.packages("remotes")
+remotes::install_github("special-uor/ageR")
+```
+
+To verify you are running the latest version, run the following command:
+
+```r
+?ageR
+```
+
+---
 ## Example (Toy data)
 ### File structure
 
