--- a/inst/training/ageR-101.html
+++ b/inst/training/ageR-101.html
@@ -46,6 +46,10 @@ To verify you are running the latest version, run the following command:
 ```
 
 ---
+class: inverse, center, middle
+# Demo
+
+---
 ## Example (Toy data)
 ### File structure
 
@@ -164,9 +168,10 @@ ageR::Bacon(wdir = "./",
             dry_run = FALSE,
             ...)
 ```
+
+More details: https://special-uor.github.io/ageR/reference/Bacon
 ---
-### Run Bacon (2)
-#### Dry-run
+### Run Bacon: Dry-run
 
 ```r
 ageR::Bacon(wdir = "./", entity = "X", dry_run = TRUE, quiet = TRUE)
@@ -227,7 +232,7 @@ ageR::Bacon(wdir = "./", entity = "X", dry_run = TRUE, quiet = TRUE)
 &lt;!-- ``` --&gt;
 
 ---
-## Wishlist (aka Github issues)
+## Wishlist (aka GitHub issues)
 
 Create new "Issues" to request new features, report an error, etc.
 
@@ -238,7 +243,7 @@ class: center, middle
 
 # Thanks!
 
-Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
+Slides created using the R package [**xaringan**](https://github.com/yihui/xaringan).
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
